Update giftideas.html with 2025 Christmas content (requested by Jlymoure25 on 2025-12-20)

--- a/giftideas.html
+++ b/giftideas.html
@@ -196,7 +196,7 @@
         <div class="subtitle">Gift Ideas For Pets & the Gift of Giving</div>
         <div class="center-img">
             <!-- Example stock image, replace with your own as needed -->
-            <img src="https://images.unsplash.com/photo-1518717758536-85ae29035b6d?auto=format&fit=crop&w=400&q=80" alt="Dog and Cat enjoying spa" style="width:80%; max-width:380px; border-radius:10px;">
+            <img src="https://images.unsplash.com/photo-1518717758536-85ae29035b6d?auto=format&fit=crop&w=400&q=80" alt="Dog and Cat enjoying spa" style="width:80%; max-width:380px; border-radius:16px;">
         </div>
 
         <div class="big-section italic">
@@ -209,15 +209,15 @@
         <div class="charity">
             <h2>🐾 Best Friends Animal Society</h2>
             <p>
-                Donate to support a special bestie friend by supporting Best Friends Animal Society where your generous donation helps support Best Friends Animal Society, the leading animal welfare organization working to save the lives of homeless pets across America. Every donation helps provide critical care, shelter, and love to animals in need.
+                Donate to support a special bestie friend by supporting Best Friends Animal Society where your generous donation helps support Best Friends Animal Society, the leading animal welfare organization working to end the killing of dogs and cats in America’s shelters.
             </p>
             <div class="section-title">🎖️ Giving Wounded Vets a Second Chance Program</div>
             <p>
-                Because we are deeply moved by the incredible work of Smoky Mountain Service Dogs, we are honored to support them in their efforts to enhance the physical and psychological quality of life for wounded veterans through professionally trained service dogs. These remarkable dogs provide independence, companionship, and renewed hope.
+                Because we are deeply moved by the incredible work of Smoky Mountain Service Dogs, we are honored to support them in their efforts to enhance the physical and psychological quality of life for wounded veterans by providing custom-trained service dogs.
             </p>
             <div class="section-title">♻️ Driving Sustainable Impact</div>
             <p>
-                We do our part in keeping the environment clean and healthy by using recycle-ready packaging to implementing a new shipping box designed to reduce waste, we are committed to continuing our path towards sustainability. Together, we can make a positive impact on our planet for future generations of pets and their people.
+                We do our part in keeping the environment clean and healthy by using recycle-ready packaging to implementing a new shipping box designed to reduce waste, we are committed to continuous improvement.
             </p>
         </div>
 
